Se agregaron los ultimos modelos y se corrigieron los modelos, se modificó el template base y su css para agregar transparencia al navbar

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -9,13 +9,14 @@ p {
 }
 
 body{
-    padding-top: 3.5em;
+    padding-top: 4em;
 }
 /*------------------------------------*/
 /*nav start*/
 nav {
 	align-items: center;
-	background: #212121;
+	/*background: #212121;*/
+	background-color: rgba(33, 33, 33, 0.9);
 	display: flex;
 	justify-content: space-evenly;
 	left: 0;
